# wx-opengl-canvas

./: .gitignore  CMakeLists.txt  README.md
include/: ControlPanel.h  GLCanvas.h  MainFrame.h
src/: ControlPanel.cpp  GLCanvas.cpp  MainFrame.cpp  main.cpp
